--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
    },
    "dependencies": {},
    "devDependencies": {
+      "@babel/core": "~7.1",
+      "@babel/preset-env": "~7.1",
       "ajv": "~6.5",
-      "babel-core": "~6.26",
-      "eslint": "~5.5",
+      "eslint": "~5.6",
       "gulp": "~4.0",
-      "gulp-babel": "~7.0",
+      "gulp-babel": "~8.0",
       "gulp-babel-minify": "~0.4",
       "gulp-header": "~2.0",
       "gulp-rename": "~1.4",
