--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
       "merge-stream": "~1.0",
       "mocha": "~5.2",
       "node-fetch": "~2.2",
+      "promise-polyfill": "~8.1",
       "whatwg-fetch": "~3.0"
    }
 }
