--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
    "name": "fetch-json",
    "description": "A wrapper around Fetch just for JSON",
-   "version": "2.1.1",
+   "version": "2.1.2",
    "license": "MIT",
    "main": "fetch-json.js",
    "repository": "github:center-key/fetch-json",
    "homepage": "https://github.com/center-key/fetch-json",
    "bugs": "https://github.com/center-key/fetch-json/issues",
-   "docs": "https://github.com/center-key/fetch-json/blob/master/README.md",
+   "docs": "https://github.com/center-key/fetch-json#readme",
+   "contributors": [
+      "KahWee Teng (https://twitter.com/kahwee)",
+      "Dem Pilafian (https://twitter.com/dempilafian)"
+   ],
    "keywords": [
       "browser",
       "fetch",
@@ -18,10 +22,6 @@
       "json",
       "post",
       "rest"
-   ],
-   "contributors": [
-      "KahWee Teng (https://twitter.com/kahwee)",
-      "Dem Pilafian (https://twitter.com/dempilafian)"
    ],
    "eslintConfig": {
       "extends": "eslint:recommended",
@@ -54,7 +54,7 @@
       "@babel/core": "~7.1",
       "@babel/preset-env": "~7.1",
       "ajv": "~6.5",
-      "eslint": "~5.7",
+      "eslint": "~5.8",
       "gulp": "~4.0",
       "gulp-babel": "~8.0",
       "gulp-babel-minify": "~0.5",
