--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
    "docs": "https://github.com/center-key/fetch-json#readme",
    "contributors": [
       "KahWee Teng (https://twitter.com/kahwee)",
-      "Dem Pilafian (https://twitter.com/dempilafian)"
+      "Dem Pilafian (https://twitter.com/dempilafian)",
+      "Calvin Settachatgul (https://github.com/calvinsettachatgul)"
    ],
    "keywords": [
       "browser",
