--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "version": "2.1.3",
    "license": "MIT",
    "main": "fetch-json.js",
-   "browser": "fetch-json.min.js",
+   "browser": "dist/fetch-json.min.js",
    "repository": "github:center-key/fetch-json",
    "homepage": "https://github.com/center-key/fetch-json",
    "bugs": "https://github.com/center-key/fetch-json/issues",
