Confiugre jshint to ignore just single line

--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
       "mocha": true,
       "node": true,
       "globals": {
-         "fetch": true,
-         "window": true
+         "fetch": true
       }
    },
    "scripts": {
