--- a/package.json
+++ b/package.json
@@ -46,22 +46,23 @@
    },
    "dependencies": {},
    "devDependencies": {
-      "@babel/core": "~7.6",
-      "@babel/preset-env": "~7.6",
+      "@babel/core": "~7.7",
+      "@babel/preset-env": "~7.7",
       "@fortawesome/fontawesome-free": "~5.11",
       "babel-minify": "~0.5",
+      "canvas": "~2.6",
       "dna.js": "~1.5",
       "gulp": "~4.0",
       "gulp-append-prepend": "~1.0",
       "gulp-babel": "~8.0",
       "gulp-header": "~2.0",
-      "gulp-htmlhint": "~2.2",
+      "gulp-htmlhint": "~3.0",
       "gulp-rename": "~1.4",
       "gulp-replace": "~1.0",
       "gulp-size": "~3.0",
       "gulp-w3c-html-validator": "~1.4",
       "jquery": "~3.4",
-      "jsdom": "~15.1",
+      "jsdom": "~15.2",
       "jshint": "~2.10",
       "mocha": "~6.2",
       "node-fetch": "~2.6",
