--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
    "main": "dist/fetch-json.js",
    "browser": "dist/fetch-json.min.js",
    "repository": "github:center-key/fetch-json",
-   "homepage": "https://github.com/center-key/fetch-json",
+   "homepage": "https://fetch-json.js.org",
    "bugs": "https://github.com/center-key/fetch-json/issues",
    "docs": "https://github.com/center-key/fetch-json#readme",
    "contributors": [
@@ -46,9 +46,9 @@
    },
    "dependencies": {},
    "devDependencies": {
-      "@babel/core": "~7.8",
-      "@babel/preset-env": "~7.8",
-      "@fortawesome/fontawesome-free": "~5.12",
+      "@babel/core": "~7.9",
+      "@babel/preset-env": "~7.9",
+      "@fortawesome/fontawesome-free": "~5.13",
       "babel-minify": "~0.5",
       "canvas": "~2.6",
       "dna.js": "~1.6",
@@ -61,10 +61,10 @@
       "gulp-replace": "~1.0",
       "gulp-size": "~3.0",
       "gulp-w3c-html-validator": "~2.0",
-      "jquery": "~3.4",
+      "jquery": "~3.5",
       "jsdom": "~16.2",
       "jshint": "~2.11",
-      "mocha": "~7.0",
+      "mocha": "~7.1",
       "node-fetch": "~2.6",
       "promise-polyfill": "~8.1",
       "web-ignition": "~1.2",
