:sparkles: Disallow var declarations

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "eqeqeq": true,
       "undef": true,
       "unused": true,
+      "varstmt": true,
       "browser": true,
       "mocha": true,
       "node": true,
