--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "pretest": "jshint *.js spec docs && gulp lint-html && gulp build-dist",
       "test": "mocha --timeout 10000 spec/*.js"
    },
+   "types": "./types.d.ts",
    "dependencies": {},
    "devDependencies": {
       "@babel/core": "~7.11",
@@ -69,6 +70,7 @@
       "mocha": "~8.1",
       "node-fetch": "~2.6",
       "promise-polyfill": "~8.1",
+      "typescript": "^4.0.3",
       "web-ignition": "~1.3",
       "whatwg-fetch": "~3.4"
    }
