--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
    },
    "scripts": {
       "pretest": "jshint *.js spec docs && gulp lint-html && gulp build-dist",
-      "test": "mocha --timeout 10000 spec/*.js"
+      "test": "mocha --timeout 10000 spec/*.js",
+      "build": "tsc",
+      "typecheck": "tsc --noEmit"
    },
    "types": "./types.d.ts",
    "dependencies": {},
@@ -52,6 +54,7 @@
       "@babel/core": "~7.11",
       "@babel/preset-env": "~7.11",
       "@fortawesome/fontawesome-free": "~5.15",
+      "@types/node": "^14.14.0",
       "babel-minify": "~0.5",
       "canvas": "~2.6",
       "dna.js": "~1.6",
