--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
-  "files": [
-    "./*.ts"
-  ],
   "compilerOptions": {
-    "rootDir": "./",
-    "baseUrl": "./",
+    "rootDir": "src",
+    "outDir": "dist",
+    "alwaysStrict": false,
     "target": "es2017", // Node.js 8
-    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "react",
@@ -24,7 +21,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "typeRoots": [
-      "./"
+      "src",
+      "node_modules/@types"
     ]
   }
 }
