--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDir": "./",
     "outDir": "dist",
     "alwaysStrict": false,
-    "target": "es2017", // Node.js 8
+    "target": "es5", // Node.js 8
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "jsx": "react",
     "declaration": true,
     "pretty": true,
     "newLine": "lf",
@@ -20,9 +19,6 @@
     "lib": [ "es2015", "dom" ],
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "typeRoots": [
-      "src",
-      "node_modules/@types"
-    ]
+    "typeRoots": ["node_modules/@types"]
   }
 }
