--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
       "@babel/core": "~7.12",
       "@babel/preset-env": "~7.12",
       "@fortawesome/fontawesome-free": "~5.15",
-      "@types/node": "^14.14.0",
+      "@types/node": "~14.14",
       "babel-minify": "~0.5",
       "canvas": "~2.6",
       "dna.js": "~1.6",
@@ -75,9 +75,9 @@
       "jshint": "~2.12",
       "mocha": "~8.2",
       "node-fetch": "~2.6",
-      "promise-polyfill": "~8.1",
-      "typescript": "~4.0",
+      "promise-polyfill": "~8.2",
+      "typescript": "~4.1",
       "web-ignition": "~1.3",
-      "whatwg-fetch": "~3.4"
+      "whatwg-fetch": "~3.5"
    }
 }
