--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
    "compilerOptions": {
       "target": "ES2020",
-      "module": "es2020",
+      "module": "ES2020",
+      "moduleResolution": "node",
       "declaration": true,
       "outDir": "build",
       "strict": true,
@@ -12,7 +13,7 @@
       "noImplicitReturns": true,
       "noFallthroughCasesInSwitch": true,
       "noUncheckedIndexedAccess": true,
-      "suppressImplicitAnyIndexErrors": true,      
+      "suppressImplicitAnyIndexErrors": true,
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true
    }
