--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "description": "A wrapper around Fetch just for JSON",
    "version": "2.3.0",
    "license": "MIT",
+   "type": "module",
    "main": "dist/fetch-json.umd.js",
    "module": "dist/fetch-json.esm.js",
    "browser": "dist/fetch-json.min.js",
@@ -65,11 +66,15 @@
       "test": "mocha spec/*.js --timeout 10000"
    },
    "dependencies": {},
+   "peerDependencies": {
+      "node-fetch": "~2.6"
+   },
    "devDependencies": {
       "@babel/core": "~7.12",
       "@babel/preset-env": "~7.12",
       "@fortawesome/fontawesome-free": "~5.15",
       "@types/node": "~14.14",
+      "@types/node-fetch": "~2.5",
       "@typescript-eslint/eslint-plugin": "~4.12",
       "@typescript-eslint/parser": "~4.12",
       "babel-minify": "~0.5",
