--- a/.github/workflows/release-on-vtag.yaml
+++ b/.github/workflows/release-on-vtag.yaml
@@ -5,12 +5,10 @@ on:
       - 'v*'
 jobs:
   build:
-    name: Create Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - id: create_release
-        uses: actions/create-release@v1
+      - uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
