Consistent .spec.js filenames for mocha files

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
       "lint": "   jshint *.js spec && eslint --max-warnings 0 . --ext .ts",
       "tsc": "    tsc --version && tsc --project . --removeComments && tsc --project . --module UMD --removeComments --outDir build/umd",
       "pretest": "npm run lint && rimraf build dist **/.DS_Store && npm run tsc && gulp make-dist",
-      "test": "   mocha spec/*.js --timeout 10000"
+      "test": "   mocha spec/*.spec.js --timeout 5000"
    },
    "dependencies": {},
    "devDependencies": {
