Simplify build with removeComments in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "noImplicitThis": true,
       "noUncheckedIndexedAccess": true,
       "noUnusedLocals": true,
+      "removeComments": true,
       "suppressImplicitAnyIndexErrors": true
    }
 }
