--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
    },
    "scripts": {
       "lint": "   jshint *.js spec && eslint --max-warnings 0 . --ext .ts",
-      "tsc": "    tsc --version && tsc --project . --removeComments && tsc --project . --module UMD --removeComments --outDir build/umd",
+      "tsc": "    tsc --version && tsc --project . && tsc --project . --module UMD --outDir build/umd",
       "pretest": "npm run lint && rimraf build dist **/.DS_Store && npm run tsc && gulp make-dist",
       "test": "   mocha spec/*.spec.js --timeout 5000"
    },
@@ -77,12 +77,12 @@
       "@fortawesome/fontawesome-free": "~5.15",
       "@types/node": "~15.12",
       "@types/node-fetch": "~2.5",
-      "@typescript-eslint/eslint-plugin": "~4.27",
-      "@typescript-eslint/parser": "~4.27",
+      "@typescript-eslint/eslint-plugin": "~4.28",
+      "@typescript-eslint/parser": "~4.28",
       "babel-minify": "~0.5",
       "canvas": "~2.8",
-      "dna.js": "~1.7",
-      "eslint": "~7.28",
+      "dna.js": "~1.8",
+      "eslint": "~7.29",
       "gulp": "~4.0",
       "gulp-append-prepend": "~1.0",
       "gulp-babel": "~8.0",
@@ -91,7 +91,7 @@
       "gulp-rename": "~2.0",
       "gulp-replace": "~1.1",
       "gulp-size": "~4.0",
-      "gulp-w3c-html-validator": "~3.2",
+      "gulp-w3c-html-validator": "~5.0",
       "jquery": "~3.6",
       "jsdom": "~16.6",
       "jshint": "~2.13",
