Fix export path to start with ./
Error [ERR_INVALID_PACKAGE_TARGET]: Invalid "exports" main target "dist/fetch-json.esm.js" defined in the package config node_modules/fetch-json/package.json imported from spec/books1.spec.js; targets must start with "./"

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
    "version": "2.4.5",
    "license": "MIT",
    "type": "module",
-   "module": "dist/fetch-json.esm.js",
-   "exports": "dist/fetch-json.esm.js",
-   "main": "dist/fetch-json.umd.cjs",
-   "browser": "dist/fetch-json.min.js",
-   "types": "dist/fetch-json.d.ts",
+   "module": "./dist/fetch-json.esm.js",
+   "exports": "./dist/fetch-json.esm.js",
+   "main": "./dist/fetch-json.umd.cjs",
+   "browser": "./dist/fetch-json.min.js",
+   "types": "./dist/fetch-json.d.ts",
    "files": [
-      "dist"
+      "./dist"
    ],
    "repository": "github:center-key/fetch-json",
    "homepage": "https://fetch-json.js.org",
