--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
    "browser": "./dist/fetch-json.min.js",
    "types": "./dist/fetch-json.d.ts",
    "files": [
-      "./dist"
+      "dist"
    ],
    "repository": "github:center-key/fetch-json",
    "homepage": "https://fetch-json.js.org",
