--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
    "version": "2.4.7",
    "license": "MIT",
    "type": "module",
-   "module": "./dist/fetch-json.esm.js",
-   "exports": "./dist/fetch-json.esm.js",
-   "main": "./dist/fetch-json.umd.cjs",
-   "browser": "./dist/fetch-json.min.js",
-   "types": "./dist/fetch-json.d.ts",
+   "module": "dist/fetch-json.esm.js",
+   "main": "dist/fetch-json.umd.cjs",
+   "browser": "dist/fetch-json.min.js",
+   "types": "dist/fetch-json.d.ts",
    "files": [
       "dist"
    ],
+   "exports": {
+      ".": {
+         "import": "./dist/fetch-json.esm.js",
+         "require": "./dist/fetch-json.umd.cjs"
+      },
+      "./": "./dist/"
+   },
    "repository": "github:center-key/fetch-json",
    "homepage": "https://fetch-json.js.org",
    "bugs": "https://github.com/center-key/fetch-json/issues",
