--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
       "babel-minify": "~0.5",
       "canvas": "~2.8",
       "dna.js": "~1.8",
-      "eslint": "~7.30",
+      "eslint": "~7.31",
       "gulp": "~4.0",
       "gulp-append-prepend": "~1.0",
       "gulp-babel": "~8.0",
@@ -105,6 +105,8 @@
       "mocha": "~9.0",
       "node-fetch": "~2.6",
       "promise-polyfill": "~8.2",
+      "puppeteer": "~10.1",
+      "puppeteer-browser-ready": "~0.3",
       "typescript": "~4.3",
       "web-ignition": "~1.4",
       "whatwg-fetch": "~3.6"
