More robust jshint pattern

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
       }
    },
    "scripts": {
-      "lint": "   jshint *.js spec && eslint --max-warnings 0 . --ext .ts",
+      "lint": "   jshint . --exclude node_modules,build,dist && eslint --max-warnings 0 . --ext .ts",
       "tsc": "    tsc --version && tsc --project . && tsc --project . --module UMD --outDir build/umd",
       "pretest": "npm run lint && rimraf build dist **/.DS_Store && npm run tsc && gulp make-dist",
       "test": "   mocha spec/*.spec.js --timeout 5000"
