--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
       }
    },
    "scripts": {
-      "lint": "   jshint . --exclude node_modules,build,dist && eslint --max-warnings 0 . --ext .ts",
+      "lint": "   jshint . --exclude node_modules,build,dist && eslint --max-warnings 0 . --ext .ts && w3c-html-validator",
       "tsc": "    tsc --version && tsc --project . && tsc --project . --module UMD --outDir build/umd",
       "pretest": "npm run lint && rimraf build dist **/.DS_Store && npm run tsc && gulp make-dist",
       "test": "   mocha spec/*.spec.js --timeout 5000"
@@ -108,6 +108,7 @@
       "puppeteer": "~10.1",
       "puppeteer-browser-ready": "~0.3",
       "typescript": "~4.3",
+      "w3c-html-validator": "~0.7",
       "web-ignition": "~1.4",
       "whatwg-fetch": "~3.6"
    }
