--- a/package.json
+++ b/package.json
@@ -71,10 +71,15 @@
       }
    },
    "scripts": {
-      "lint": "   jshint . --exclude node_modules,build,dist && eslint --max-warnings 0 . --ext .ts && w3c-html-validator",
-      "tsc": "    tsc --version && tsc --project . && tsc --project . --module UMD --outDir build/umd",
-      "pretest": "npm run lint && rimraf build dist **/.DS_Store && npm run tsc && gulp make-dist",
-      "test": "   mocha spec/*.spec.js --timeout 5000"
+      "step:01": "rimraf build dist **/.DS_Store",
+      "step:02": "jshint . --exclude node_modules,build,dist",
+      "step:03": "eslint --max-warnings 0 . --ext .ts",
+      "step:04": "tsc",
+      "step:05": "tsc --module UMD --outDir build/umd",
+      "step:06": "gulp make-dist",
+      "step:07": "w3c-html-validator",
+      "step:08": "mocha spec/*.spec.js --timeout 5000",
+      "test": "npm-run-all step:*"
    },
    "dependencies": {},
    "devDependencies": {
@@ -83,13 +88,13 @@
       "@fortawesome/fontawesome-free": "~5.15",
       "@types/node": "~16.4",
       "@types/node-fetch": "~2.5",
-      "@typescript-eslint/eslint-plugin": "~4.28",
-      "@typescript-eslint/parser": "~4.28",
+      "@typescript-eslint/eslint-plugin": "~4.29",
+      "@typescript-eslint/parser": "~4.29",
       "assert-deep-strict-equal": "~0.0",
       "babel-minify": "~0.5",
       "canvas": "~2.8",
       "dna.js": "~1.8",
-      "eslint": "~7.31",
+      "eslint": "~7.32",
       "gulp": "~4.0",
       "gulp-append-prepend": "~1.0",
       "gulp-babel": "~8.0",
@@ -98,13 +103,13 @@
       "gulp-rename": "~2.0",
       "gulp-replace": "~1.1",
       "gulp-size": "~4.0",
-      "gulp-w3c-html-validator": "~5.0",
       "jquery": "~3.6",
-      "jsdom": "~16.6",
+      "jsdom": "~16.7",
       "jshint": "~2.13",
       "merge-stream": "~2.0",
       "mocha": "~9.0",
       "node-fetch": "~2.6",
+      "npm-run-all2": "~5.0",
       "promise-polyfill": "~8.2",
       "puppeteer": "~10.1",
       "puppeteer-browser-ready": "~0.3",
