--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "fetch-json",
    "description": "A wrapper around Fetch just for JSON (written in TypeScript)",
-   "version": "2.5.1",
+   "version": "2.5.2",
    "license": "MIT",
    "type": "module",
    "module": "dist/fetch-json.esm.js",
@@ -86,13 +86,14 @@
       "@babel/core": "~7.15",
       "@babel/preset-env": "~7.15",
       "@fortawesome/fontawesome-free": "~5.15",
-      "@types/node": "~16.4",
+      "@types/node": "~16.6",
       "@types/node-fetch": "~2.5",
       "@typescript-eslint/eslint-plugin": "~4.29",
       "@typescript-eslint/parser": "~4.29",
       "assert-deep-strict-equal": "~0.0",
       "babel-minify": "~0.5",
       "canvas": "~2.8",
+      "copyfiles": "~2.4",
       "dna.js": "~1.8",
       "eslint": "~7.32",
       "gulp": "~4.0",
