--- a/package.json
+++ b/package.json
@@ -76,10 +76,12 @@
       "step:03": "eslint --max-warnings 0 . --ext .ts",
       "step:04": "tsc",
       "step:05": "tsc --module UMD --outDir build/umd",
-      "step:06": "gulp make-dist",
-      "step:07": "w3c-html-validator",
-      "step:08": "mocha spec/*.spec.js --timeout 5000",
-      "test": "npm-run-all step:*",
+      "step:06": "cpy build/umd/fetch-json.js build --rename=fetch-json.umd.cjs",
+      "step:07": "gulp minify-js",
+      "step:08": "add-dist-header build dist",
+      "step:09": "w3c-html-validator",
+      "pretest": "npm-run-all step:*",
+      "test": "mocha spec/*.spec.js --timeout 5000",
       "examples": "node docs/js/examples.js && tsc && node build/docs/ts/examples.js"
    },
    "dependencies": {},
@@ -87,36 +89,34 @@
       "@babel/core": "~7.15",
       "@babel/preset-env": "~7.15",
       "@fortawesome/fontawesome-free": "~5.15",
-      "@types/node": "~16.9",
+      "@types/node": "~16.10",
       "@types/node-fetch": "~3.0",
-      "@typescript-eslint/eslint-plugin": "~4.31",
-      "@typescript-eslint/parser": "~4.31",
+      "@typescript-eslint/eslint-plugin": "~4.32",
+      "@typescript-eslint/parser": "~4.32",
+      "add-dist-header": "~0.0",
       "assert-deep-strict-equal": "~0.0",
       "babel-minify": "~0.5",
       "canvas": "~2.8",
-      "copyfiles": "~2.4",
+      "cpy-cli": "~3.1",
       "dna.js": "~1.9",
       "eslint": "~7.32",
       "gulp": "~4.0",
       "gulp-append-prepend": "~1.0",
       "gulp-babel": "~8.0",
-      "gulp-header": "~2.0",
-      "gulp-htmlhint": "~4.0",
       "gulp-rename": "~2.0",
       "gulp-replace": "~1.1",
       "gulp-size": "~4.0",
       "jquery": "~3.6",
       "jsdom": "~17.0",
       "jshint": "~2.13",
-      "merge-stream": "~2.0",
       "mocha": "~9.1",
       "node-fetch": "~3.0",
       "npm-run-all2": "~5.0",
       "promise-polyfill": "~8.2",
-      "puppeteer": "~10.2",
+      "puppeteer": "~10.4",
       "puppeteer-browser-ready": "~0.3",
       "typescript": "~4.4",
-      "w3c-html-validator": "~0.7",
+      "w3c-html-validator": "~0.8",
       "web-ignition": "~1.4",
       "whatwg-fetch": "~3.6"
    }
