--- a/package.json
+++ b/package.json
@@ -91,15 +91,15 @@
       "@fortawesome/fontawesome-free": "~5.15",
       "@types/node": "~16.10",
       "@types/node-fetch": "~3.0",
-      "@typescript-eslint/eslint-plugin": "~4.33",
-      "@typescript-eslint/parser": "~4.33",
+      "@typescript-eslint/eslint-plugin": "^5.0",
+      "@typescript-eslint/parser": "^5.0",
       "add-dist-header": "~0.1",
       "assert-deep-strict-equal": "~0.0",
       "babel-minify": "~0.5",
       "canvas": "~2.8",
       "cpy-cli": "~3.1",
       "dna.js": "~1.9",
-      "eslint": "~7.32",
+      "eslint": "~8.0",
       "gulp": "~4.0",
       "gulp-append-prepend": "~1.0",
       "gulp-babel": "~8.0",
@@ -107,7 +107,7 @@
       "gulp-replace": "~1.1",
       "gulp-size": "~4.0",
       "jquery": "~3.6",
-      "jsdom": "~17.0",
+      "jsdom": "~18.0",
       "jshint": "~2.13",
       "mocha": "~9.1",
       "node-fetch": "~3.0",
