Update cdn link for whatwg-fetch

--- a/package.json
+++ b/package.json
@@ -89,17 +89,17 @@
       "@babel/core": "~7.15",
       "@babel/preset-env": "~7.15",
       "@fortawesome/fontawesome-free": "~5.15",
-      "@types/node": "~16.10",
+      "@types/node": "~16.11",
       "@types/node-fetch": "~3.0",
-      "@typescript-eslint/eslint-plugin": "^5.0",
-      "@typescript-eslint/parser": "^5.0",
+      "@typescript-eslint/eslint-plugin": "~5.1",
+      "@typescript-eslint/parser": "~5.1",
       "add-dist-header": "~0.1",
       "assert-deep-strict-equal": "~0.0",
       "babel-minify": "~0.5",
       "canvas": "~2.8",
       "cpy-cli": "~3.1",
       "dna.js": "~1.9",
-      "eslint": "~8.0",
+      "eslint": "~8.1",
       "gulp": "~4.0",
       "gulp-append-prepend": "~1.0",
       "gulp-babel": "~8.0",
