--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
       "step:03": "eslint --max-warnings 0 . --ext .ts",
       "step:04": "tsc",
       "step:05": "tsc --module UMD --outDir build/umd",
-      "step:06": "cpy build/umd/fetch-json.js build --rename=fetch-json.umd.cjs",
+      "step:06": "cpy build/umd/fetch-json.js build --rename=fetch-json.umd.cjs --flat=true",
       "step:07": "gulp minify-js",
       "step:08": "add-dist-header build dist",
       "step:09": "w3c-html-validator",
@@ -84,19 +84,18 @@
       "test": "mocha spec/*.spec.js --timeout 5000",
       "examples": "node docs/js/examples.js && tsc && node build/docs/ts/examples.js"
    },
-   "dependencies": {},
    "devDependencies": {
       "@babel/core": "~7.17",
       "@babel/preset-env": "~7.16",
       "@fortawesome/fontawesome-free": "~6.0",
       "@types/node": "~17.0",
-      "@typescript-eslint/eslint-plugin": "~5.13",
-      "@typescript-eslint/parser": "~5.13",
+      "@typescript-eslint/eslint-plugin": "~5.14",
+      "@typescript-eslint/parser": "~5.14",
       "add-dist-header": "~0.1",
       "assert-deep-strict-equal": "~1.0",
       "babel-minify": "~0.5",
       "canvas": "~2.9",
-      "cpy-cli": "~3.1",
+      "cpy-cli": "~4.0",
       "dna.js": "~1.9",
       "eslint": "~8.10",
       "gulp": "~4.0",
@@ -112,7 +111,7 @@
       "node-fetch": "~3.2",
       "npm-run-all2": "~5.0",
       "promise-polyfill": "~8.2",
-      "puppeteer": "~13.4",
+      "puppeteer": "~13.5",
       "puppeteer-browser-ready": "~0.4",
       "typescript": "~4.6",
       "w3c-html-validator": "~1.0",
