--- a/package.json
+++ b/package.json
@@ -72,11 +72,11 @@
    },
    "scripts": {
       "step:01": "rimraf build dist **/.DS_Store",
-      "step:02": "jshint . --exclude node_modules,build,dist",
+      "step:02": "jshint . --exclude-path .gitignore",
       "step:03": "eslint --max-warnings 0 . --ext .ts",
       "step:04": "tsc",
       "step:05": "tsc --module UMD --outDir build/umd",
-      "step:06": "cpy build/umd/fetch-json.js build --rename=fetch-json.umd.cjs --flat=true",
+      "step:06": "copy-file build/umd/fetch-json.js build/fetch-json.umd.cjs",
       "step:07": "gulp minify-js",
       "step:08": "add-dist-header build dist",
       "step:09": "w3c-html-validator",
@@ -89,13 +89,14 @@
       "@babel/preset-env": "~7.19",
       "@fortawesome/fontawesome-free": "~6.2",
       "@types/node": "~18.7",
-      "@typescript-eslint/eslint-plugin": "~5.37",
-      "@typescript-eslint/parser": "~5.37",
+      "@typescript-eslint/eslint-plugin": "~5.38",
+      "@typescript-eslint/parser": "~5.38",
       "add-dist-header": "~0.2",
       "assert-deep-strict-equal": "~1.0",
       "babel-minify": "~0.5",
       "canvas": "~2.10",
-      "cpy-cli": "~4.2",
+      "copy-file-util": "~0.1",
+      "copy-folder-cli": "~0.1",
       "dna.js": "~2.0",
       "eslint": "~8.23",
       "gulp": "~4.0",
@@ -111,7 +112,7 @@
       "node-fetch": "~3.2",
       "npm-run-all2": "~6.0",
       "promise-polyfill": "~8.2",
-      "puppeteer": "~17.1",
+      "puppeteer": "~18.0",
       "puppeteer-browser-ready": "~0.5",
       "typescript": "~4.8",
       "w3c-html-validator": "~1.1",
