--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
       "step:06": "copy-file build/umd/fetch-json.js build/fetch-json.umd.cjs",
       "step:07": "gulp minify-js",
       "step:08": "add-dist-header build dist",
-      "step:09": "w3c-html-validator",
+      "step:09": "html-validator",
       "pretest": "npm-run-all step:*",
       "test": "mocha spec/*.spec.js --timeout 5000",
       "examples": "node docs/js/examples.js && tsc && node build/docs/ts/examples.js"
@@ -98,7 +98,7 @@
       "copy-file-util": "~0.1",
       "copy-folder-cli": "~0.1",
       "dna.js": "~2.0",
-      "eslint": "~8.23",
+      "eslint": "~8.24",
       "gulp": "~4.0",
       "gulp-append-prepend": "~1.0",
       "gulp-babel": "~8.0",
