--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
       "mocha": true,
       "node": true,
       "globals": {
-         "fetch": true
+         "fetch": true,
+         "globalThis": true
       }
    },
    "eslintConfig": {
@@ -77,34 +78,27 @@
       "step:04": "tsc",
       "step:05": "tsc --module UMD --outDir build/umd",
       "step:06": "copy-file build/umd/fetch-json.js build/fetch-json.umd.cjs",
-      "step:07": "gulp minify-js",
-      "step:08": "add-dist-header build dist",
-      "step:09": "html-validator",
+      "step:07": "esm-to-plain-js --cd=build fetch-json.js fetch-json.dev.js",
+      "step:08": "uglifyjs build/fetch-json.dev.js --output build/fetch-json.min.js",
+      "step:09": "add-dist-header build dist",
+      "step:10": "html-validator",
       "pretest": "npm-run-all step:*",
-      "test": "mocha spec/*.spec.js --timeout 5000",
+      "test": "mocha spec/*.spec.js --timeout 5000 --retries 1",
       "examples": "node docs/js/examples.js && tsc && node build/docs/ts/examples.js"
    },
    "devDependencies": {
-      "@babel/core": "~7.19",
-      "@babel/preset-env": "~7.19",
       "@fortawesome/fontawesome-free": "~6.2",
-      "@types/node": "~18.7",
+      "@types/node": "~18.8",
       "@typescript-eslint/eslint-plugin": "~5.38",
       "@typescript-eslint/parser": "~5.38",
-      "add-dist-header": "~0.2",
+      "add-dist-header": "~0.3",
       "assert-deep-strict-equal": "~1.0",
-      "babel-minify": "~0.5",
       "canvas": "~2.10",
       "copy-file-util": "~0.1",
       "copy-folder-cli": "~0.1",
       "dna.js": "~2.0",
       "eslint": "~8.24",
-      "gulp": "~4.0",
-      "gulp-append-prepend": "~1.0",
-      "gulp-babel": "~8.0",
-      "gulp-rename": "~2.0",
-      "gulp-replace": "~1.1",
-      "gulp-size": "~4.0",
+      "esm-to-plain-js": "~0.0",
       "jquery": "~3.6",
       "jsdom": "~20.0",
       "jshint": "~2.13",
@@ -115,6 +109,7 @@
       "puppeteer": "~18.0",
       "puppeteer-browser-ready": "~0.5",
       "typescript": "~4.8",
+      "uglify-js": "~3.17.2",
       "w3c-html-validator": "~1.1",
       "web-ignition": "~1.5",
       "whatwg-fetch": "~3.6"
