Create an esm dist file without node-fetch for browsers
fetch-json.browser.js
#31

--- a/package.json
+++ b/package.json
@@ -75,13 +75,14 @@
       "step:01": "rimraf build dist **/.DS_Store",
       "step:02": "jshint . --exclude-path .gitignore",
       "step:03": "eslint --max-warnings 0 . --ext .ts",
-      "step:04": "tsc",
-      "step:05": "tsc --module UMD --outDir build/umd",
-      "step:06": "copy-file build/umd/fetch-json.js build/fetch-json.umd.cjs",
-      "step:07": "esm-to-plain-js --cd=build fetch-json.js fetch-json.dev.js",
-      "step:08": "uglifyjs build/fetch-json.dev.js --output build/fetch-json.min.js",
-      "step:09": "add-dist-header build dist",
-      "step:10": "html-validator",
+      "step:10": "tsc",
+      "step:11": "tsc --module UMD --outDir build/umd",
+      "step:12": "copy-file build/umd/fetch-json.js build/fetch-json.umd.cjs",
+      "step:13": "esm-to-plain-js --cd=build fetch-json.js fetch-json.dev.js",
+      "step:14": "uglifyjs build/fetch-json.dev.js --output build/fetch-json.min.js",
+      "step:15": "files-replace build/fetch-json.js build --rename=fetch-json.browser.js --regex=/^import.*$/m",
+      "step:20": "add-dist-header build dist",
+      "step:30": "html-validator",
       "pretest": "npm-run-all step:*",
       "test": "mocha spec/*.spec.js --timeout 5000 --retries 1",
       "examples": "node docs/js/examples.js && tsc && node build/docs/ts/examples.js"
@@ -96,9 +97,10 @@
       "canvas": "~2.10",
       "copy-file-util": "~0.1",
       "copy-folder-cli": "~0.1",
-      "dna.js": "~2.0",
-      "eslint": "~8.24",
+      "dna-engine": "~2.2",
+      "eslint": "~8.25",
       "esm-to-plain-js": "~0.0",
+      "files-replace": "~0.1",
       "jquery": "~3.6",
       "jsdom": "~20.0",
       "jshint": "~2.13",
@@ -106,7 +108,7 @@
       "node-fetch": "~3.2",
       "npm-run-all2": "~6.0",
       "promise-polyfill": "~8.2",
-      "puppeteer": "~18.0",
+      "puppeteer": "~18.2",
       "puppeteer-browser-ready": "~0.5",
       "typescript": "~4.8",
       "uglify-js": "~3.17",
