Use new name for replacer build tool

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
       "step:12": "copy-file build/umd/fetch-json.js build/fetch-json.umd.cjs",
       "step:13": "esm-to-plain-js --cd=build fetch-json.js fetch-json.dev.js",
       "step:14": "uglifyjs build/fetch-json.dev.js --output build/fetch-json.min.js",
-      "step:15": "files-replace build/fetch-json.js build --rename=fetch-json.browser.js --regex=/^import.*$/m",
+      "step:15": "replacer build/fetch-json.js build --rename=fetch-json.browser.js --regex=/^import.*$/m",
       "step:20": "add-dist-header build dist",
       "step:30": "html-validator",
       "pretest": "npm-run-all step:*",
@@ -90,17 +90,17 @@
    "devDependencies": {
       "@fortawesome/fontawesome-free": "~6.2",
       "@types/node": "~18.8",
-      "@typescript-eslint/eslint-plugin": "~5.39",
-      "@typescript-eslint/parser": "~5.39",
+      "@typescript-eslint/eslint-plugin": "~5.40",
+      "@typescript-eslint/parser": "~5.40",
       "add-dist-header": "~0.3",
       "assert-deep-strict-equal": "~1.0",
       "canvas": "~2.10",
       "copy-file-util": "~0.1",
-      "copy-folder-cli": "~0.1",
+      "copy-folder-util": "~0.2",
       "dna-engine": "~2.2",
       "eslint": "~8.25",
-      "esm-to-plain-js": "~0.0",
-      "files-replace": "~0.1",
+      "esm-to-plain-js": "~0.1",
+      "replacer-util": "~0.2",
       "jquery": "~3.6",
       "jsdom": "~20.0",
       "jshint": "~2.13",
