--- a/package.json
+++ b/package.json
@@ -94,23 +94,23 @@
    "devDependencies": {
       "@fortawesome/fontawesome-free": "~6.2",
       "@types/node": "~18.11",
-      "@typescript-eslint/eslint-plugin": "~5.47",
-      "@typescript-eslint/parser": "~5.47",
+      "@typescript-eslint/eslint-plugin": "~5.50",
+      "@typescript-eslint/parser": "~5.50",
       "add-dist-header": "~0.3",
       "assert-deep-strict-equal": "~1.0",
       "copy-file-util": "~0.1",
       "copy-folder-util": "~0.2",
-      "dna-engine": "~2.2",
-      "eslint": "~8.31",
+      "dna-engine": "~2.3",
+      "eslint": "~8.33",
       "esm-to-plain-js": "~0.1",
       "jquery": "~3.6",
-      "jsdom": "~20.0",
+      "jsdom": "~21.1",
       "jshint": "~2.13",
       "mocha": "~10.2",
-      "promise-polyfill": "~8.2",
-      "puppeteer": "~19.4",
+      "puppeteer": "19.5",
       "puppeteer-browser-ready": "~0.5",
       "replacer-util": "~0.3",
+      "rimraf": "3",
       "run-scripts-util": "~0.1",
       "typescript": "~4.9",
       "uglify-js": "~3.17",
